src/test/ui/consts/control-flow/assert.const_panic.stderr
error: any use of this value will cause an error
  --> $DIR/assert.rs:10:15
   |
LL | const _: () = assert!(false);
   | --------------^^^^^^^^^^^^^^-
   |               |
   |               the evaluated program panicked at 'assertion failed: false', $DIR/assert.rs:10:15
   |
   = note: `#[deny(const_err)]` on by default
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

